// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders correctly 1`] = `
<div>
  <input
    class="govuk-input lbh-input"
  />
</div>
`;

exports[`it renders correctly with an error 1`] = `
<div>
  <input
    class="govuk-input lbh-input govuk-input--error"
  />
</div>
`;
